Fix toast. add dark mode buttons, start feature flags

--- a/src/BoxToTabletop.Client/public/styles.css
+++ b/src/BoxToTabletop.Client/public/styles.css
@@ -43,7 +43,7 @@ body {
 }
 
 .table-unit-name {
-    width: min-content;
+    width: min-content !important;
 }
 
 .add-unit-button-box {
